--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -7,6 +7,8 @@ on:
         description: version string (eg. 6.1)
         required: true
 
+permissions:
+  contents: write
 jobs:
   create-release:
     name: Version ${{ github.event.inputs.version }}
